rest-error-handling/src/main/java/shuaicj/example/rest/error/handling/GlobalErrorHandler.java
package shuaicj.example.rest.error.handling;

import org.springframework.http.HttpStatus;
import org.springframework.web.HttpRequestMethodNotSupportedException;
import org.springframework.web.bind.MethodArgumentNotValidException;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseStatus;

/**
 * Global error handler.
 *
 * @author shuaicj 2018/05/11
 */
@ControllerAdvice
public class GlobalErrorHandler {

    @ExceptionHandler(MethodArgumentNotValidException.class)
    @ResponseStatus(HttpStatus.BAD_REQUEST)
    public Error controllerScopeErrorHandler(MethodArgumentNotValidException e) {
        return new Error(e);
    }

    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
    @ResponseStatus(HttpStatus.METHOD_NOT_ALLOWED)
    public Error globalScopeErrorHandler(HttpRequestMethodNotSupportedException e) {
        return new Error(e);
    }

    @ExceptionHandler(Exception.class)
    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
    public Error globalScopeErrorHandler(Exception e) {
        return new Error(e);
    }
}
